# hitch-io

./: .gitignore  __main__.py  hitch_io.epj  hitch_io.pyproject  main.py  pyproject.toml
.eric7project/: hitch_io.eqj  hitch_io.etj  venv_config.json
src/filter_expansion_panel/: __init__.py  filter_expansion_panel.py  filter_icon_button.py
src/filter_expansion_panel/ui/: accessibility_features_expansion_panel.kv  average_session_length_expansion_panel.kv  filter_expansion_panel.kv  filter_expansion_panel_content.kv  filter_header_list_item.kv  genre_expansion_panel.kv  input_methods_expansion_panel.kv  misc_expansion_panel.kv  multiplayer_features_expansion_panel.kv  platforms_expansion_panel.kv  price_expansion_panel.kv  type_expansion_panel.kv  when_expansion_panel.kv
src/filter_header_list_item/: __init__.py  filter_header_list_item.py
src/filter_icon_button/: filter_icon_button.py
src/filter_icon_button/ui/: filter_icon_button.kv
src/filter_widget/ui/: filter_widget.py
src/games_screen/: __init__.py  games_screen.py
src/games_screen/ui/: games_screen.kv  price_expansion_panel.kv
src/library_screen/: __init__.py  library_screen.py
src/library_screen/ui/: label.kv  library_screen.kv  scroll_view.kv
src/main_window/: main_window.py
src/main_window/ui/: main.kv  main_window.py
src/navigation_bar/: navigation_bar.py
src/navigation_bar/ui/: navigation_bar.kv
src/qml/: main_window.qml
src/settings_screen/: __init__.py  switch_with_text.py
src/updates_screen/: __init__.py  updates_screen.py
ui/: filter_widget.ui  main.kv  main_window.ui
(+8 files in other folders)
