[project]
name = "hitch-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.9.1",
    "qt-material>=2.17",
]

[dependency-groups]
dev = [
    "jedi>=0.19.2",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]
